<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_button">C</string>
    <string name="add_button">+</string>
    <string name="sub_button">-</string>
    <string name="mul_button">x</string>
    <string name="div_button">/</string>
    <string name="dot_button">.</string>
    <string name="equals_button">=</string>
    <string name="swap_sign_button">+/-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>
