<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7">

    <TextView
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_weight="2.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:weightSum="4"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@android:color/holo_blue_dark"
            android:stretchColumns="*"
            android:weightSum="4">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_weight="1">
                <Button
                    android:id="@+id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/one"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/two"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/three"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_weight="1">
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/four"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/five"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/six"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_weight="1">
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/seven"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/eight"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/nine"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_weight="1">
                <Button
                    android:id="@id/digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/zero"
                    android:textSize="30sp"
                    android:onClick="onDigitClicked"/>
                <Button
                    android:id="@+id/dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/dot_button"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/equals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/equals_button"
                    android:textSize="30sp"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="vertical">

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/clear_button"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/operation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/add_button"
                android:textSize="30sp"
                android:onClick="onOperationClicked"/>
            <Button
                android:id="@id/operation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/sub_button"
                android:textSize="30sp"
                android:onClick="onOperationClicked"/>
            <Button
                android:id="@id/operation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/mul_button"
                android:textSize="30sp"
                android:onClick="onOperationClicked"/>
            <Button
                android:id="@id/operation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/div_button"
                android:textSize="30sp"
                android:onClick="onOperationClicked"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>